
include $(top_srcdir)/Makefile.am.common

SUBDIRS = missing
sbin_PROGRAMS = anubis
anubis_SOURCES = missing/snprintf.c \
                missing/strdup.c \
                missing/strlcat.c \
                missing/strlcpy.c \
                missing/strcasecmp.c \
                json.c \
                anubis_defaults.c \
                anubis_parse_headers.c \
                anubis_parser.c \
                anubis_stream.c \
                anubis_time.c \
                anubis_value_converter.c \
                anubis_writer.c \
                anubis_dumper.c \
                anubis_libnet_extension.c \
                anubis_value_checker.c \
                anubis_extra.c \
                anubis.c 